Schemas / Replace XML schema-ident by YML configuration.
Co-authored-by: Jose García <josegar74@gmail.com>